--- a/myproject/index.html
+++ b/myproject/index.html
@@ -40,7 +40,7 @@
         </section>
         <section class="about" id="about">
             <div class="about-img">
-                <img src="https://wallpaperaccess.com/full/1385382.jpg" alt="">
+                <img src="https://i.ibb.co/G2cvvTG/image.jpg" alt="">
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
@@ -55,26 +55,16 @@
             <div class="services-container">
                 <div class="services-box">
                     <i class='bx bx-code-alt'></i>
-                    <h3>Web Development</h3>
-                    <p>Motivated designer and developer
-                         with experience creating custom websites through PHP and CSS. 
-                         Strong collaboration skills and proven history of application development. DHTML and JavaScript. MS Access and MySQL.</p>
+                    <h3>Goat bot v2</h3>
+                    <p>At Anchestor AI, we provide a range of services to enhance user interaction: Custom Commands: We’ve developed commands for seamless user engagement and quick responses. API Integration: Our chatbot accesses real-time data, providing up-to-date information. Personalized Interactions: Anchestor AI adapts to user preferences for tailored responses. Continuous Improvement: We regularly update our services based on user feedback. Our goal is to create an engaging and informative experience for all users!.</p>
                     <a href="#"class="btn">Read More</a>
                 </div>
         
                 <div class="services-box">
                     <i class='bx bx-crop' ></i>
-                    <h3>UI/UX Design</h3>
-                    <p>You cannot make a good design if you do not understand people; design is made for people.</p>
-                    <a href="#"class="btn">Read More</a>
-                </div>
-            
-                <div class="services-box">
-                    <i class='bx bxl-instagram-alt' ></i>
-                    <h3>App Design</h3>
-                    <p>I'm UI/UX Designer with a great passion to my work. The main goal is to create modern, attractive and user-friendly interfaces and find creative and simple solutions for your business.
-                        </p>
-                    <a href="#"class="btn">Read More</a>
+                    <h3>Free APIs</h3>
+                    <p>At Anchestor AI, we provide a variety of APIs to enhance your applications. You can access our Image Generator API to create stunning visuals, a Data Retrieval API for real-time information, and a Natural Language Processing API for smarter user interactions. Explore our offerings to unlock new possibilities for your projects!</p>
+                    <a href="#"class="btn">Get APIs</a>
                 </div>
             </div>
         </section>
@@ -84,8 +74,8 @@
                 <div class="portfolio-box">
                     <img src="C:\Users\shrey\Downloads\jan-vlacuha-Rns_A8bJ_dQ-unsplash.jpg"alt="">
                     <div class="portfolio-layer">
-                        <h4>Perssonal Portfolio</h4>
-                        <p>In this project I try making my own portfolio website for myself. Showcase my projects, my social media handles, my experience on the website.</p>
+                        <h4>Anchestor AI</h4>
+                        <p>In this project, Anchestor AI is a Messenger chatbot built on the foundation of ntkhang's Goat Bot v2 and developed by Høpéléss Hîmú . Released on September 27, 2024, it marks Hîmú's first project in chatbot development. Anchestor AI aims to deliver personalized and interactive conversations, expanding on Goat Bot v2’s capabilities to handle a wide range of tasks. It represents Hîmú’s goal of creating a responsive and adaptive chatbot, designed to evolve with user interactions over time..</p>
                         <a href="#"><i class='bx bx-link-external' ></i></a>
                     </div>
                 </div>
