--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href="#home" class="active">Home</a>
                 <a href="#about">ABOUT</a>
                 <a href="#services">SERVICES</a>
-                <a href="#portfolio">PORTFOLIO</a>
+                <a href="#portfolio">PROJECT</a>
                 <a href="#contact">CONTACT</a>
             </nav>
         </header>
@@ -35,7 +35,7 @@
                 <a href="C:\Users\shrey\Downloads\B.-Software-Engineer.docx" class="btn">Download CV</a>
             </div>
             <div class="home-img">
-                <img src="https://i.ibb.co/3mdfLmC/image.jpg" alt="">
+                <img src="https://i.ibb.co/zRf9x3j/image.jpg" alt="">
             </div>
         </section>
         <section class="about" id="about">
@@ -72,7 +72,7 @@
             <h2 class="heading">Latest<span>Project</span></h2>
             <div class="portfolio-container">
                 <div class="portfolio-box">
-                    <img src="C:\Users\shrey\Downloads\jan-vlacuha-Rns_A8bJ_dQ-unsplash.jpg"alt="">
+                    <img src="https://i.ibb.co/3BprjXf/image.jpg"alt="">
                     <div class="portfolio-layer">
                         <h4>Anchestor AI</h4>
                         <p>In this project, Anchestor AI is a Messenger chatbot built on the foundation of ntkhang's Goat Bot v2 and developed by Høpéléss Hîmú . Released on September 27, 2024, it marks Hîmú's first project in chatbot development. Anchestor AI aims to deliver personalized and interactive conversations, expanding on Goat Bot v2’s capabilities to handle a wide range of tasks. It represents Hîmú’s goal of creating a responsive and adaptive chatbot, designed to evolve with user interactions over time..</p>
