--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <!--body-->
         <header class="header">
-            <a href="#" class="logo">Portfolio</a>
+            <a href="#" class="logo">BOT ADMIN</a>
             <i class='bx bx-menu' id="menu-icon"></i>
             <nav class="navbar">
                 <a href="#home" class="active">Home</a>
@@ -28,9 +28,9 @@
                 <h3>And I'm a <span class="multiple-text"></span></h3>
                 <div class="social-media">
                     <a href="https://github.com/HIMU999FF"><i class='bx bxl-github'></i></a>
-                    <a href="#"><i class='bx bxs-envelope'></i></a>
-                    <a href="#"><i class='bx bxl-instagram' ></i></a>
-                    <a href="LINK DIN"><i class='bx bxl-linkedin-square' ></i></a>
+                    <a href="mailto:himuislam5935@gmail.com"><i class='bx bxs-envelope'></i></a>
+                    <a href="https://www.instagram.com/himubby/profilecard/?igsh=cThlN3BtZm1sYzVw"><i class='bx bxl-instagram' ></i></a>
+                    <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
                 <a href="C:\Users\shrey\Downloads\B.-Software-Engineer.docx" class="btn">Download CV</a>
             </div>
