--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="https://www.instagram.com/himubby/profilecard/?igsh=cThlN3BtZm1sYzVw"><i class='bx bxl-instagram' ></i></a>
                     <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
                 </div>
-                <a href="C:\Users\shrey\Downloads\B.-Software-Engineer.docx" class="btn">Download CV</a>
+                <a href="https://www.facebook.com/99.6T9.HIMU.6T9.1?mibextid=ZbWKwL" class="btn">CONTACT</a>
             </div>
             <div class="home-img">
                 <img src="https://i.ibb.co/zRf9x3j/image.jpg" alt="">
