--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="about-content">
                 <h2 class="heading">About<span>Me</span></h2>
-                <h3>Frontend Developer</h3>
+                <h3>Backend JavaScript developer</h3>
                 <p>Hello, I am Himu, a 15-year-old student and an avid coder. My strengths are in JavaScript, and I enjoy building websites, creating dynamic applications, and solving problems by writing code. I love frontend development and making web experiences interactive. I just love the art of bringing ideas to life with technology. Always up for learning and improvement, I am excited about the endless possibilities that exist within programming!</p>
                  <a href="#"class="btn">Read More</a>   
             </div>
